tests/paczka1/fuzzy1/96869508.err
Error in line 2: rIuiYUrjq A692 81,8
Error in line 10: S4dK S63 198,7
Error in line 3: 0pNdHb S63 80,1
Error in line 11: S4dK A812 96,3
Error in line 13: 0pNdHb A692 83,1
Error in line 34: 8nYAuTpaRAy A,9, 51,0
